# code-to-prompt

./: .gitignore  PROMPT.md  README.md  REPOSITORY.md  main.py  pyproject.toml
code_to_prompt/: cli.py  config.py  constants.py  filesystem.py  formatters.py  handlers.py
tests/: conftest.py  test_cli.py  test_config.py  test_filesystem.py  test_formatters.py  test_handlers.py
